[package]
name = "gophsters"
version = "0.1.0"
authors = ["Julien Blanchard <julien@sideburns.eu>"]
edition = "2018"

[dependencies]
hyper = "0.12"
hyper-tls = "*"
serde = { version = "1.0", features = ["derive"] }
serde_json = "*"
chrono = "*"
regex ="*"
textwrap ="*"
deunicode = "0.4.0"
structopt = "0.2"
url = "2.1"
